# fun-cmd

./: .gitignore  README.rst  setup.cfg  setup.py
funcmd/: cmd.py  tests.py  tools.py
