;;
;; FUN package
;;
[metadata]
name = fun-cmd
version = 0.1.0
description = Convenience tool to handle FUN services
long_description = file: README.rst
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/fun-cmd
license= AGPL 3.0
keywords = Django, Open edX, MOOC
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
packages = find:
zip_safe = False

[options.entry_points]
console_scripts =
    fun = funcmd.cmd:fun

[options.extras_require]
dev =
    nose
    wheel

[wheel]
universal = 1
